--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <h1>kanye west</h1>
     <h2>A Vida de ye</h2>
-  <p>falar sobre <em>ye</em></p><strong><em>america/strong></p>
+  <p>Essa pagina tem objetivo de falar sobre a <em>vida</em> de <strong>Kanye</strong></p>
 </html>
