--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<html>
-    <h1>kanye west</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+</html>
     <h2>A Vida de ye</h2>
   <p>Essa pagina tem objetivo de falar sobre a <em>vida</em> de <strong>Kanye</strong></p>
 </html>
