--- a/index.html
+++ b/index.html
@@ -4,3 +4,8 @@
     <h2>A Vida de ye</h2>
   <p>Essa pagina tem objetivo de falar sobre a <em>vida</em> de <strong>Kanye</strong></p>
 </html>
+</head>
+</body>
+<p style=
+</body>
+</html>
